--- a/index.html
+++ b/index.html
@@ -211,18 +211,18 @@
         <article>
           <div class="title-education">
             <div class="marker"></div>
-            <h3>Front-end - Maquetados Estaticos</h3>
+            <h3>Front-end - Static Layouts</h3>
           </div>
           <p class="descripcion-portfolio">
-            Maquetados estaticos utilizando HTML, CSS y SASS
+            Static layouts using HTML, CSS and SASS
           </p>
           <div class="proyectos">
-            <!-- Hecho en js renderizador_maquetados.js -->
+            <!-- Made in js renderer_maquetados.js -->
           </div>
         </article>
       </section>
       <section id="contacto">
-        <h2>Contacto</h2>
+        <h2>Contact</h2>
         <div class="separator"></div>
 
         <article>
@@ -232,7 +232,7 @@
                 <i class="fa-sharp fa-solid fa-map-location-dot"></i>
               </div>
               <div class="info-contacto">
-                <p class="subt-contacto">Ubicacion:</p>
+                <p class="subt-contacto">Location:</p>
                 <p class="detalles-contacto">
                   San Salvador de Jujuy, Jujuy, Argentina
                 </p>
@@ -252,74 +252,76 @@
                 <i class="fa-solid fa-phone"></i>
               </div>
               <div class="info-contacto">
-                <p class="subt-contacto">Telefono:</p>
+                <p class="subt-contacto">Telephone:</p>
                 <p class="detalles-contacto">+54 388 5733294</p>
               </div>
             </div>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6511.708159256423!2d-65.30057316237756!3d-24.18837122084182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x941b0f4313922973%3A0x552c0eaeb6432a0!2sPlaza%20Belgrano!5e0!3m2!1ses-419!2sar!4v1699832103917!5m2!1ses-419!2sar"
               height="450"
+              class="mapa"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
           </div>
 
-          <div class="area-de-form">
-            <form id="formulario" name="formulario">
+          <div class="form-area">
+            <form id="form" name="form">
               <div class="box-name-email">
                 <div>
-                  <label for="name">Tu nombre</label>
+                  <label for="name">Your name</label>
                   <input
-                    class="estilo-input input-nombre"
+                    class="input-style input-name"
                     type="text"
                     name="name"
                     id="name"
                   />
                   <div class="error-name">
-                    <p>Ingrese nombre valido</p>
+                    <p>Enter a valid name</p>
                   </div>
                 </div>
                 <div>
-                  <label for="email">Tu email</label>
+                  <label for="email">Your email</label>
                   <input
-                    class="estilo-input input-email"
+                    class="input-style input-email"
                     type="email"
                     name="email"
                     id="email"
                   />
                   <div class="error-email">
-                    <p>Ingrese email valido</p>
+                    <p>Enter a valid email</p>
                   </div>
                 </div>
               </div>
               <div>
-                <label for="tema">Tema</label>
+                <label for="topic">Topic</label>
                 <input
-                  class="estilo-input input-tema"
+                  class="input-style input-topic"
                   type="text"
-                  name="tema"
-                  id="tema"
+                  name="topic"
+                  id="topic"
                 />
-                <div class="error-tema">
-                  <p>Ingrese tema valido</p>
+                <div class="error-topic">
+                  <p>Enter a valid topic</p>
                 </div>
               </div>
               <div>
-                <label for="mensaje">Tu mensaje</label>
+                <label for="message">Your message</label>
                 <textarea
-                  class="estilo-input-textarea input-mensaje"
-                  name="mensaje"
-                  id="mensaje"
+                  class="input-style-textarea input-message"
+                  name="message"
+                  id="message"
                   cols="30"
                   rows="10"
                 ></textarea>
-                <div class="error-msj">
-                  <p>Ingrese mensaje</p>
+                <div class="error-msg">
+                  <p>Enter a message</p>
                 </div>
               </div>
-              <button class="boton" type="submit"><p>Enviar</p></button>
+              <button class="button" type="submit"><p>Send</p></button>
             </form>
+            
           </div>
         </article>
       </section>
@@ -327,7 +329,7 @@
 
     <footer>
       <div class="autor">
-        <p class="hecho-por">Hecho por:</p>
+        <p class="hecho-por">Made by:</p>
         <p class="fabio">Fabio D. Agañaraz A.</p>
       </div>
       <div class="iconos-footer">
