--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
         <article>
           <div class="title-education">
             <div class="marker"></div>
-            <h3>Front-end - Static Layouts</h3>
+            <h3>Front-end - Static & Dynamic Layouts</h3>
           </div>
           <p class="descripcion-portfolio">
-            Static layouts using HTML, CSS and SASS
+            Static & dynamic layouts using HTML, CSS, SASS and JS
           </p>
           <div class="proyectos">
             <!-- Made in js renderer_maquetados.js -->
